# seam

./: .gitignore  ANALYSIS-PHONE-RUN.md  ANALYSIS.md  CLAUDE.md  DESIGN-V2.md  DESIGN-V3.md  DESIGN.md  LICENSE  LOG.md  README.md  V2.md  V3.md  actions.py  agents.py  analyze_batches.py  analyze_changepoints.py  analyze_changepoints_stats.py  analyze_congestion_fix.py  analyze_craft_economy.py  analyze_cross_society.py  analyze_cross_society_stats.py  analyze_decision_debug.py  analyze_early_warning.py  analyze_goal_drift.py  analyze_inequality.py  analyze_llm_narratives.py  analyze_node_hotspots.py  analyze_trade_network.py  analyze_trade_network_sidecar.py  constants.py  decide.py  export_data.py  export_narrative.py  export_strategy.py  layout.py  leads.py  log.py  render.py  requirements.txt  run.py  (+6 more)
core-rs/: Cargo.toml  schema.sql
core-rs/src/: actions.rs  agents.rs  constants.rs  decide.rs  lib.rs  log.rs  main.rs  serve_main.rs  stats.rs  tick.rs  world.rs
core-rs/viewer/: index.html  smoke_test.sh
sidecar/: sidecar.py
